[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "monkey"
crate-type = ["cdylib"]

[[bin]]
name = "append"
path = "src/append/bin/main.rs"

[[bin]]
name = "stats"
path = "src/stats/bin/main.rs"

[dependencies]
polars = { version = "0.35.4", features = ["lazy", "parquet", "dtype-categorical"] }
pyo3 = "0.19.0"
